--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="NewId" Version="4.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
+
 </Project>
