add package EF Core

--- a/Src/Api/Configurations/appsettings.json
+++ b/Src/Api/Configurations/appsettings.json
@@ -1,3 +1,13 @@
 {
-
+    "AllowedHosts": "*",
+    "Urls": "http://localhost:8080",
+    "ApplicationInfos": {
+        "Name": "Your Application Name"
+    },
+    "StaticFileSettings": {
+        "BaseUrl": "http://localhost:8080"
+    },
+    "ApiKeySettings": {
+        "Default": "c63837bc-4845-45c5-8443-3f94b319be39"
+    }
 }
