--- a/Src/Api/Api.csproj
+++ b/Src/Api/Api.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Migrators\Migrators.PostgreSql\Migrators.PostgreSql.csproj" />
   </ItemGroup>
 
 </Project>
